Closed Bug 1003657 Opened 12 years ago Closed 12 years ago

[Bluedroid] The memory of ReplyRunnable for DefaultAdapterPathRequest wouldn't be released and becomes a leak.

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:1.4+, firefox30 wontfix, firefox31 wontfix, firefox32 fixed, b2g-v1.4 fixed, b2g-v2.0 fixed)

RESOLVED FIXED
2.0 S1 (9may)
blocking-b2g 1.4+
Tracking Status
firefox30 --- wontfix
firefox31 --- wontfix
firefox32 --- fixed
b2g-v1.4 --- fixed
b2g-v2.0 --- fixed

People

(Reporter: jaliu, Assigned: jaliu)

References

Details

(Whiteboard: [p=1],)

Attachments

(2 files, 1 obsolete file)

The memory of BluetoothRequestParent::ReplyRunnable for DefaultAdapterPathRequest wouldn't be released and becomes a leak. Please refer to ipc/BluetoothParent.cpp STR: 1. Enable BT 2. Disable BT 3. Kill setting app 4. Check the log in destructor of BluetoothRequestParent::ReplyRunnable
Assignee: nobody → jaliu
Summary: The memory of ReplyRunnable for DefaultAdapterPathRequest wouldn't be released and becomes a leak. → [Bluedroid] The memory of ReplyRunnable for DefaultAdapterPathRequest wouldn't be released and becomes a leak.
Status: NEW → ASSIGNED
Attachment #8415017 - Flags: review?(echou)
Attachment #8415017 - Flags: feedback?(shuang)
See Also: → 997962
Attachment #8415017 - Flags: review?(echou) → review+
blocking-b2g: --- → 1.4?
1.4+ for BT issues
blocking-b2g: 1.4? → 1.4+
Whiteboard: [p=1]
Whiteboard: [p=1] → [p=1], [ETA:5/7]
Keywords: checkin-needed
Attachment #8417784 - Attachment is obsolete: false
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Whiteboard: [p=1], [ETA:5/7] → [p=1],
Target Milestone: --- → 2.0 S1 (9may)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: